--- a/Module3/theMovieApp/my-movie-app/package.json
+++ b/Module3/theMovieApp/my-movie-app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "typewriter-effect": "^2.21.0"
   },
